# feup-aed_

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
data/: classes_per_uc.csv  students_classes.csv
doc/html/: _class_u_c_8h_source.html  _data_manager_8h_source.html  _menu_8cpp.html  _menu_8h_source.html  _request_8h_source.html  _request_manager_8h_source.html  annotated.html  class_class_u_c-members.html  class_class_u_c.html  class_data_manager-members.html  class_data_manager.html  class_menu-members.html  class_menu.html  class_request-members.html  class_request.html  class_request_manager-members.html  class_request_manager.html  class_slot-members.html  class_slot.html  class_student-members.html  class_student.html  class_turma-members.html  class_turma.html  class_uc-members.html  class_uc.html  classes.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  menudata.js  slot_8h_source.html  student_8h_source.html  turma_8h_source.html  uc_8h_source.html
doc/latex/: _class_u_c_8h_source.tex  _data_manager_8h_source.tex  _menu_8cpp.tex  _menu_8h_source.tex  _request_8h_source.tex  _request_manager_8h_source.tex  annotated.tex  class_class_u_c.tex  class_data_manager.tex  class_menu.tex  class_request.tex  class_request_manager.tex  class_slot.tex  class_student.tex  class_turma.tex  (+7 more)
src/: ClassUC.cpp  ClassUC.h  DataManager.cpp  DataManager.h  Doxyfile  Menu.cpp  Menu.h  Request.cpp  Request.h  RequestManager.cpp  RequestManager.h  main.cpp  slot.cpp  slot.h  student.cpp  student.h  turma.cpp  turma.h  uc.cpp  uc.h
(+25 files in other folders)
